<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_title">My Nanodegree Apps!</string>

    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores">SCORES APP</string>
    <string name="library">LIBRARY APP</string>
    <string name="bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="spotify_streamer_msg">This button will launch my Spotify Streamer app!</string>
    <string name="scores_msg">This button will launch my SCORES app!</string>
    <string name="library_msg">This button will launch my LIBRARY app!</string>
    <string name="bigger_msg">This button will launch my BUILD IT BIGGER app!</string>
    <string name="xyz_reader_msg">This button will launch my XYZ READER app!</string>
    <string name="capstone_msg">This button will launch my CAPSTONE app!</string>


</resources>
